--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: 6.1.0
   http: ^1.2.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
